# emotime

./: README.md  benchOMP.txt
doc/: identifying-good-pragma-candidates.cpp  refactor-cuda.cpp  refactor-omp-2.cpp  refactor-omp.cpp  snippet-overlay.cpp
src/: CMakeLists.txt
src/dataset/: datasetVerifyPrediction.py
src/detector/: CMakeLists.txt  EmoDetector.cpp  EmoDetector.h  emo_detector_cli.cpp
src/facedetector/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  facecrop_cli.cpp
src/gaborbank/: CMakeLists.txt  GaborBank.cpp
src/gui/: ACapture.cpp  AGui.cpp  CMakeLists.txt  EmotimeGui.cpp  EmotimeGui.h  VideoCapture.cpp
src/tools/: timer.cpp  timer.h
